--- a/css/styles.css
+++ b/css/styles.css
@@ -622,7 +622,14 @@ img {
     fill: var(--CLOUD);
     padding: 12px;
 }
+.newsletter-input {
+    border-radius: 4px;
+    border: 1px solid var(--WHITE);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    background: var(--NAVY-BLUE);
 
+
+}
 
 
 
