--- a/css/styles.css
+++ b/css/styles.css
@@ -636,7 +636,14 @@ img {
     border-radius: 4px;
     border: 1px solid var(--WHITE);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    background: var(--NAVY-BLUE);
+    background-color: var(--NAVY-BLUE);
+    color: var(--WHITE);
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 2;
+    letter-spacing: 0.48px;
 }
 .newsletter-form {
     display: flex;
