--- a/css/styles.css
+++ b/css/styles.css
@@ -644,6 +644,7 @@ img {
     font-weight: 400;
     line-height: 2;
     letter-spacing: 0.48px;
+    padding: 8px 212px 8px 16px;
 }
 .newsletter-form {
     display: flex;
