--- a/css/styles.css
+++ b/css/styles.css
@@ -632,6 +632,9 @@ img {
     letter-spacing: 0.32px;
     margin-bottom: 16px;
 }
+.newsletter-label {
+
+}
 .newsletter-input {
     border-radius: 4px;
     border: 1px solid var(--WHITE);
