--- a/css/styles.css
+++ b/css/styles.css
@@ -632,6 +632,9 @@ img {
     letter-spacing: 0.32px;
     margin-bottom: 16px;
 }
+.form-container {
+    margin-left: 80px;
+}
 .newsletter-label {
     
 }
@@ -655,6 +658,7 @@ img {
 }
 .newsletter-form {
     display: flex;
+    gap: 24px;
 }
 .newsletter-button {
     display: inline-flex;
