--- a/css/styles.css
+++ b/css/styles.css
@@ -172,6 +172,7 @@ img {
     background-position: center;
     align-items: center;
     justify-content: center;
+    margin-bottom: 120px;
 }
 .first-section h1 {
     text-align: center;
@@ -185,6 +186,32 @@ img {
     max-width: 496px;
     margin-left: 316px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .order-service {
     display: block;
     line-height: 1.5;
@@ -229,6 +256,8 @@ img {
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px;
+    
 }
 .close-btn {
     position: absolute;
@@ -267,6 +296,36 @@ img {
     visibility: hidden;
     pointer-events: none;
 }
+.modal-heading { 
+    color: var(--NAVY-BLUE);
+    text-align: center;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+    margin-bottom: 16px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -337,6 +396,7 @@ img {
 }
 .third-section {
     padding-bottom: 120px;
+    padding-top: 120px;
 }
 .images-list {
     display: flex;
