--- a/css/styles.css
+++ b/css/styles.css
@@ -308,6 +308,8 @@ img {
     font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.48px;
+    display: block;
+    margin-bottom: 4px;
     }
 .modal-heading { 
     color: var(--NAVY-BLUE);
