--- a/css/styles.css
+++ b/css/styles.css
@@ -326,10 +326,19 @@ img {
 .modal-input {
     border: none;
     background-color: transparent;
-}
-.input-container {
+    width: 100%;
+    height: 40px;
     border-radius: 4px;
     border: 1px solid var(--NAVY-BLUE-MODAL);
+    padding-left: 38px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.modal-input:focus,
+.modal-input:hover {
+    border-color: var(--IRIS);
+}
+.input-container {
     width: 360px;
     height: 40px;
     display: flex;
