--- a/css/styles.css
+++ b/css/styles.css
@@ -376,7 +376,14 @@ img {
     align-items: center;
 }
 .modal-svg {
-    
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-svg:focus {
+    fill: var(--IRIS);
 }
 .privacy-politic {
     display: inline;
