--- a/css/styles.css
+++ b/css/styles.css
@@ -379,7 +379,8 @@ img {
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-svg:focus {
+.modal-svg:focus,
+.modal-svg:hover {
     fill: var(--IRIS);
 }
 .privacy-politic {
