--- a/css/styles.css
+++ b/css/styles.css
@@ -334,8 +334,7 @@ img {
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
-.modal-input:focus,
-.modal-input:hover {
+.modal-input:focus {
     border-color: var(--IRIS);
 }
 .input-container {
@@ -379,8 +378,7 @@ img {
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-svg:focus,
-.modal-svg:hover {
+.modal-svg:focus {
     fill: var(--IRIS);
 }
 .privacy-politic {
