--- a/css/styles.css
+++ b/css/styles.css
@@ -383,7 +383,17 @@ img {
 }
 .privacy-politic {
     display: inline;
-
+    margin-bottom: 16px;
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.48px;
+    color: var(--NAVY-BLUE-MODAL);
+    background-color: transparent;
+    padding: 8px 16px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .privacy-paragraph {
     color: var(--LIGHT-SLATE);
