--- a/css/styles.css
+++ b/css/styles.css
@@ -383,7 +383,6 @@ img {
 }
 .privacy-politic {
     display: inline;
-    margin-bottom: 16px;
     font-family: Roboto;
     font-size: 12px;
     font-style: normal;
@@ -394,6 +393,9 @@ img {
     background-color: transparent;
     padding: 8px 16px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.for-text-area {
+    margin-bottom: 16px;
 }
 .privacy-paragraph {
     color: var(--LIGHT-SLATE);
