--- a/css/styles.css
+++ b/css/styles.css
@@ -394,7 +394,7 @@ img {
     display: inline;
     font-family: Roboto;
 }
-.for-text-area {
+.form-text-area {
     margin-bottom: 16px;
 }
 .privacy-paragraph {
