--- a/css/styles.css
+++ b/css/styles.css
@@ -360,7 +360,10 @@ img {
     background-color: transparent;
     padding: 8px 16px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    outline: transparent;
+}
+.textarea:focus {
+    border-color: var(--IRIS);
 }
 .modal-button {
     border-radius: 4px;
@@ -392,7 +395,8 @@ img {
 }
 .privacy-politic {
     display: inline;
-    font-family: Roboto;
+    font-family: ("Roboto", sans-serif);
+    margin-bottom: 24px;
 }
 .form-text-area {
     margin-bottom: 16px;
