--- a/css/styles.css
+++ b/css/styles.css
@@ -401,7 +401,7 @@ img {
 .form-text-area {
     margin-bottom: 16px;
 }
-.privacy-paragraph {
+.privacy-label {
     color: var(--LIGHT-SLATE);
     font-family: ("Roboto", sans-serif);
     font-size: 12px;
@@ -409,6 +409,7 @@ img {
     font-weight: 400;
     line-height: 1.16;
     letter-spacing: 0.48px;
+    display: block;
 }
 .privacy-link {
     color: var(--IRIS);
