--- a/css/styles.css
+++ b/css/styles.css
@@ -386,6 +386,7 @@ img {
     height: 56px;
     border: none;
     margin: 24px;
+    
 }
 .modal-svg {
     position: absolute;
@@ -432,6 +433,7 @@ img {
     align-items: center;
     justify-content: center;
     fill: transparent;
+    margin-right: 8px;
 }
 .box-policy:checked + .box-svg {
     border: none;
@@ -453,6 +455,7 @@ img {
     border: none;
     border-radius: 4px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin: 24px 96px;
 }
 
 
